<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:background="@android:color/darker_gray"
        android:text="@string/pldetail_name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pldet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:text="@string/pldetail_adress_lable"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pldet_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:text="@string/pldetail_rating_lable"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/pldet_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:numStars="5"
        android:rating="05" />
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:weightSum="100"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/pldet_web_btn"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="28"
	        android:drawableTop="@drawable/ic_action_web_site"
	        android:text="@string/pldetail_web_btn" />
	
	    <Button
	        android:id="@+id/pldet_fav_btn"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="44"
	        android:drawableTop="@drawable/ic_action_important"
	        android:text="@string/pldetail_fav_btn" />

	    <Button
	        android:id="@+id/pldet_sha_btn"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="28"
	        android:drawableTop="@drawable/ic_action_share_dark"
	        android:text="@string/pldetail_sha_btn" />

    </LinearLayout>
    
</LinearLayout>
</ScrollView>
