<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/dial_expe_filt_categ_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/expe_dial_fitl_categ_label" />

    <Spinner
        android:id="@+id/dial_expe_filt_categ_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:entries="@array/array_category"
        android:spinnerMode="dropdown" />

    <ImageView 
        android:src="@drawable/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/activity_vertical_margin" />
    
    <CheckBox
        android:id="@+id/dial_expe_filt_date_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/expe_dial_filt_date_label" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <LinearLayout 
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dial_expe_filt_sdate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/expe_dial_filt_sdate" />

            <Button
                android:id="@+id/dial_expe_filt_edate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/expe_dial_filt_edate" />
        </LinearLayout>

        <LinearLayout 
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dial_expe_filt_sdate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"                
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dial_expe_filt_edate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>